--- a/Jama/src/main/webapp/resources/sections/user.xhtml
+++ b/Jama/src/main/webapp/resources/sections/user.xhtml
@@ -89,38 +89,11 @@
 
 			</p:row>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 			<p:row>
-
-				<p:row>
-					<p:column>
-						<h:outputText value="#{msgs.department}:" />
-					</p:column>
-
-					<p:column>
-						<h:outputText value="#{userEditor.selectedDept.displayName}" />
-					</p:column>
-				</p:row>
 
 				<p:panel>
 
-					<br />
-
-					<p:dataTable id="userRoles" value="#{userEditor.user.roles}" var="role" rowKey=""
+					<p:dataTable id="userRoles" value="#{userEditor.user.roles}" var="role" rowKey="#{userEditor.user.roles.indexOf(role)}"
 						emptyMessage="#{msgs.noRoleFound}">
 
 						<f:facet name="header">
@@ -141,77 +114,61 @@
 						</p:column>
 
 						<p:column>
-							<h:outputText value="#{share.id}" />
+							<h:outputText value="#{userEditor.getDepartmentFromRole(role)}" />
 						</p:column>
 
 						<p:column>
-							<p:commandButton value="#{msgs.remove}" action="#{agrShareTablePB.removeShare(share)}" update="@form" process="@this"
-								rendered="#{not cc.attrs.editingDisable}" />
+							<p:commandButton value="#{msgs.remove}" action="#{userEditor.removeRole(role)}" update="@form" process="@this"
+								rendered="#{cc.attrs.mode == 'wizard'}" />
 						</p:column>
 
 					</p:dataTable>
 
 					<br />
 
-					<p:panelGrid id="personnalShareInput" style="width: 100%" rendered="#{cc.attrs.mode == 'wizard'}">
+					<p:panelGrid id="roleInput" style="width: 100%" rendered="#{cc.attrs.mode == 'wizard'}">
 
 						<p:row>
-							<p:column width="15%">
+							<p:column width="10%">
 								<h:outputText value="#{msgs.role}: " />
 							</p:column>
 
-							<p:column width="25%">
-								<p:selectOneMenu id="type" value="#{userEditor.user.role}" label="#{msgs.role}" filterMatchMode="contains"
-									disabled="#{cc.attrs.editingDisable}" required="#{not empty param[_contractChiefShareAddBtn.clientId]}">
+							<p:column width="35%">
+								<p:selectOneMenu id="newRole" value="#{userEditor.newRolePermission}" label="#{msgs.role}" required="#{not empty param[_roleAddBtn.clientId]}">
 									<f:selectItem itemLabel="#{msgs.select}" itemValue="#{null}" />
 									<f:selectItems value="#{utilPB.rolesItems}" />
-									<f:ajax event="valueChange" execute="@this" />
+									<p:ajax event="valueChange" process="@this" />
 								</p:selectOneMenu>
 							</p:column>
 
 							<p:column width="10%">
-								<h:outputText value="#{msgs.shareTablePersonnelId}" />
+								<h:outputText value="#{msgs.department}" />
 							</p:column>
 
-							<p:column width="10%">
-								<h:inputText value="#{agrShareTablePB.newShare.id}" label="#{msgs.shareTablePersonnelId}">
+							<p:column width="35%">
+								<p:selectOneMenu id="newDepartment" value="#{userEditor.newDepartment}" disabled="#{userEditor.newDepartmentRequired()}"
+									required="#{(not empty param[_roleAddBtn.clientId]) and userEditor.newDepartmentRequired()}" label="#{msgs.department}">
+									<f:selectItem itemLabel="#{msgs.select}" itemValue="#{null}" />
+									<f:selectItems value="#{utilPB.depthItems}" />
 									<p:ajax event="valueChange" process="@this" />
-								</h:inputText>
+								</p:selectOneMenu>
 							</p:column>
 
 							<p:column width="10%">
-								<h:outputText value="#{msgs.share}" />
-							</p:column>
-
-							<p:column width="10%">
-								<h:inputText id="personnalShareValueInput" value="#{agrShareTablePB.newShare.value}" label="#{msgs.share}">
-									<f:validator binding="#{percentValidator}" />
-									<f:ajax event="valueChange" execute="@this" render="percentPersonnelShare personnalShareValueInputError" />
-								</h:inputText>
-								<h:outputText value=" %" />
-							</p:column>
-
-							<p:column width="10%">
-								<h:outputText id="percentPersonnelShare" value="#{agrShareTablePB.newShare.flatAmount}">
-									<f:attribute name="plain" value="false" />
-								</h:outputText>
-							</p:column>
-
-							<p:column width="10%">
-								<p:commandButton value="#{msgs.add}" action="#{agrShareTablePB.addShare()}" update="personnalShareInput userRoles"
-									process="personnalShareInput, @this" binding="#{_contractChiefShareAddBtn}" />
+								<p:commandButton value="#{msgs.add}" action="#{userEditor.addRole()}" update="roleInput userRoles" process="roleInput, @this"
+									binding="#{_roleAddBtn}" />
 							</p:column>
 						</p:row>
 
 						<p:row>
 							<p:column colspan="4">
-								<p:message autoUpdate="true" for="type" />
+								<p:message autoUpdate="true" for="newRole" />
 							</p:column>
 						</p:row>
 
 						<p:row>
 							<p:column colspan="4">
-								<p:message autoUpdate="true" for="personnalShareValueInput" id="personnalShareValueInputError" />
+								<p:message autoUpdate="true" for="newDepartment" />
 							</p:column>
 						</p:row>
 					</p:panelGrid>
