--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -73,7 +73,7 @@
 					styleClass="center">
 					<p:row>
 						<p:column>
-							<p:commandButton action="#{userEditor.createUser()}"
+							<p:commandButton action="#{userCreator.createUser()}"
 								value="#{msgs.create_user}" styleClass="buttons" />
 						</p:column>
 						<p:column>
