--- a/Jama/src/main/webapp/resources/sections/userData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/userData.xhtml
@@ -75,7 +75,7 @@
 				<p:panel>
 
 					<p:dataTable id="userRoles" value="#{userEditor.user.roles}" var="role" rowKey="#{userEditor.user.roles.indexOf(role)}"
-						emptyMessage="#{msgs.noRoleFound}" >
+						emptyMessage="#{msgs.noRoleFound}"  >
 
 						<f:facet name="header">
 							<h:outputText value="#{msgs.userRoles}" />
@@ -114,8 +114,7 @@
 							</p:column>
 
 							<p:column width="35%">
-								<p:selectOneMenu id="newRole" value="#{userEditor.newRolePermission}" label="#{msgs.role}"
-									required="#{not empty param[_roleAddBtn.clientId]}">
+								<p:selectOneMenu id="newRole" value="#{userEditor.newRolePermission}" label="#{msgs.role}">
 									<f:selectItems value="#{utilPB.rolesItems}" />
 									<p:ajax event="valueChange" process="@this" update="newDepartment" />
 								</p:selectOneMenu>
@@ -127,7 +126,7 @@
 
 							<p:column width="35%">
 								<p:selectOneMenu id="newDepartment" value="#{userEditor.newDepartment}" disabled="#{not userEditor.newDepartmentRequired()}"
-									required="#{(not empty param[_roleAddBtn.clientId]) and userEditor.newDepartmentRequired()}" label="#{msgs.department}">
+									required="#{userEditor.newDepartmentRequired()}" label="#{msgs.department}">
 									<f:selectItems value="#{utilPB.depthItems}" />
 									<f:converter binding="#{departmentConverter}" />
 									<p:ajax event="valueChange" process="@this" />
@@ -135,8 +134,7 @@
 							</p:column>
 
 							<p:column width="10%">
-								<p:commandButton value="#{msgs.add}" action="#{userEditor.addRole()}" update="roleInput userRoles" process="roleInput, @this"
-									binding="#{_roleAddBtn}" />
+								<p:commandButton value="#{msgs.add}" actionListener="#{userEditor.addRole()}" update="roleInput userRoles" process="roleInput, @this" />
 							</p:column>
 						</p:row>
 
