--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -21,67 +21,71 @@
 			<p:panel header="#{msgs.available_actions}" styleClass="center"
 				id="actionPanel">
 
-				<p:panelGrid
-					rendered="#{userManager.loggedUser.hasRolePermission('OPERATOR')==true}"
-					styleClass="center">
+				<p:fieldset legend="#{msgs.operator}" toggleable="true"
+					rendered="#{userManager.loggedUser.hasRolePermission('OPERATOR')==true}">
+					<p:panelGrid styleClass="center">
 
-					<p:row>
-						<p:column>
-							<p:commandButton value="#{msgs.create_agreement}"
-								action="#{contractManager.createAgreement}" styleClass="buttons" />
-						</p:column>
-						<p:column>
-							<p:commandButton action="#{contractManager.createFunding()}"
-								value="#{msgs.create_funding}" styleClass="buttons" />
-						</p:column>
-					</p:row>
+						<p:row>
+							<p:column>
+								<p:commandButton value="#{msgs.create_agreement}"
+									action="#{contractManager.createAgreement}"
+									styleClass="buttons" />
+							</p:column>
+							<p:column>
+								<p:commandButton action="#{contractManager.createFunding()}"
+									value="#{msgs.create_funding}" styleClass="buttons" />
+							</p:column>
+						</p:row>
 
-					<p:row>
-						<p:column>
-							<p:button value="#{msgs.viewEdit_contracts}" outcome="agreementList"
-								styleClass="buttons" />
-						</p:column>
-						<p:column>
-							<p:button value="#{msgs.view_deadlines}"
-								outcome="agreementSchedule" styleClass="buttons" />
-						</p:column>
-					</p:row>
-					<p:row>
-						<p:column>
-							<p:button value="#{msgs.view_companyList}" outcome="companyList" styleClass="buttons"  ></p:button>
-						</p:column>
-					
-					
-					</p:row>
-
-				</p:panelGrid>
+						<p:row>
+							<p:column>
+								<p:button value="#{msgs.viewEdit_contracts}"
+									outcome="agreementList" styleClass="buttons" />
+							</p:column>
+							<p:column>
+								<p:button value="#{msgs.view_deadlines}"
+									outcome="agreementSchedule" styleClass="buttons" />
+							</p:column>
+						</p:row>
+						<p:row>
+							<p:column>
+								<p:button value="#{msgs.view_companyList}" outcome="companyList"
+									styleClass="buttons"></p:button>
+							</p:column>
 
 
-				<p:panelGrid
-					rendered="#{userManager.loggedUser.hasRolePermission('PROFESSOR')==true}"
-					styleClass="center">
-					<p:row>
-						<p:column>
-							<p:button value="#{msgs.view_contracts}"
-								outcome="chiefContractList" styleClass="buttons" />
-						</p:column>
-					</p:row>
-				</p:panelGrid>
+						</p:row>
 
-				<p:panelGrid
-					rendered="#{userManager.loggedUser.hasRolePermission('ADMIN')==true}"
-					styleClass="center">
-					<p:row>
-						<p:column>
-							<p:commandButton action="#{userCreator.createUser()}"
-								value="#{msgs.create_user}" styleClass="buttons" />
-						</p:column>
-						<p:column>
-							<p:button outcome="userList" value="#{msgs.view_users}"
-								styleClass="buttons" />
-						</p:column>
-					</p:row>
-				</p:panelGrid>
+					</p:panelGrid>
+				</p:fieldset>
+
+				<p:fieldset legend="#{msgs.professor}" toggleable="true"
+					rendered="#{userManager.loggedUser.hasRolePermission('PROFESSOR')==true}">
+					<p:panelGrid styleClass="center">
+						<p:row>
+							<p:column>
+								<p:button value="#{msgs.view_contracts}"
+									outcome="chiefContractList" styleClass="buttons" />
+							</p:column>
+						</p:row>
+					</p:panelGrid>
+				</p:fieldset>
+
+				<p:fieldset legend="#{msgs.administrator}" toggleable="true"
+					rendered="#{userManager.loggedUser.hasRolePermission('ADMIN')==true}">
+					<p:panelGrid styleClass="center">
+						<p:row>
+							<p:column>
+								<p:commandButton action="#{userCreator.createUser()}"
+									value="#{msgs.create_user}" styleClass="buttons" />
+							</p:column>
+							<p:column>
+								<p:button outcome="userList" value="#{msgs.view_users}"
+									styleClass="buttons" />
+							</p:column>
+						</p:row>
+					</p:panelGrid>
+				</p:fieldset>
 
 			</p:panel>
 		</div>
