--- a/Jama/src/main/webapp/resources/sections/toolbar.xhtml
+++ b/Jama/src/main/webapp/resources/sections/toolbar.xhtml
@@ -19,7 +19,7 @@
 
 				<p:button value="#{msgs.home}" icon="ui-icon-home" outcome="home"></p:button>
 
-				<p:commandButton action="#{userEditor.editLoggedUser()}" value="#{msgs.profile}" icon="ui-icon-person" />
+				<p:commandButton action="#{userProfilePB.editLoggedUser()}" value="#{msgs.profile}" icon="ui-icon-person" />
 
 				<p:commandButton type="button" icon="ui-icon-arrowreturnthick-1-s" value="#{msgs.logout}" onclick="w_confirm_logout.show();" />
 
