--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -1,10 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:sections="http://java.sun.com/jsf/composite/sections"
-	xmlns:p="http://primefaces.org/ui">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:sections="http://java.sun.com/jsf/composite/sections" xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<h:outputStylesheet name="home.css" library="css" />
@@ -18,70 +14,60 @@
 
 		<div class="center">
 
-			<p:panel header="#{msgs.available_actions}" styleClass="center"
-				id="actionPanel">
+			<p:panel header="#{msgs.available_actions}" styleClass="center" id="actionPanel">
 
-				<p:fieldset legend="#{msgs.operator}" toggleable="true"
-					rendered="#{userManager.loggedUser.hasRolePermission('OPERATOR')==true}">
+				<p:fieldset legend="#{msgs.operator}" toggleable="true" rendered="#{userManager.loggedUser.hasRolePermission('OPERATOR')==true}">
 					<p:panelGrid styleClass="center">
-
 						<p:row>
 							<p:column>
-								<p:commandButton value="#{msgs.create_agreement}"
-									action="#{contractManager.createAgreement}"
-									styleClass="buttons" />
+								<p:button value="#{msgs.viewEdit_contracts}" outcome="agreementList" styleClass="buttons" />
 							</p:column>
 							<p:column>
-								<p:commandButton action="#{contractManager.createFunding()}"
-									value="#{msgs.create_funding}" styleClass="buttons" />
+								<p:button value="#{msgs.view_deadlines}" outcome="agreementSchedule" styleClass="buttons" />
 							</p:column>
+
+							<p:column>
+								<p:button value="#{msgs.view_companyList}" outcome="companyList" styleClass="buttons"></p:button>
+							</p:column>
+
+
 						</p:row>
 
 						<p:row>
 							<p:column>
-								<p:button value="#{msgs.viewEdit_contracts}"
-									outcome="agreementList" styleClass="buttons" />
+								<p:commandButton value="#{msgs.create_agreement}" action="#{contractManager.createAgreement}" styleClass="buttons" />
 							</p:column>
 							<p:column>
-								<p:button value="#{msgs.view_deadlines}"
-									outcome="agreementSchedule" styleClass="buttons" />
+								<p:commandButton action="#{contractManager.createFunding()}" value="#{msgs.create_funding}" styleClass="buttons" />
 							</p:column>
 						</p:row>
-						<p:row>
-							<p:column>
-								<p:button value="#{msgs.view_companyList}" outcome="companyList"
-									styleClass="buttons"></p:button>
-							</p:column>
 
-
-						</p:row>
 
 					</p:panelGrid>
 				</p:fieldset>
 
-				<p:fieldset legend="#{msgs.professor}" toggleable="true"
-					rendered="#{userManager.loggedUser.hasRolePermission('PROFESSOR')==true}">
+				<br />
+
+				<p:fieldset legend="#{msgs.professor}" toggleable="true" rendered="#{userManager.loggedUser.hasRolePermission('PROFESSOR')==true}">
 					<p:panelGrid styleClass="center">
 						<p:row>
 							<p:column>
-								<p:button value="#{msgs.view_contracts}"
-									outcome="chiefContractList" styleClass="buttons" />
+								<p:button value="#{msgs.view_contracts}" outcome="chiefContractList" styleClass="buttons" />
 							</p:column>
 						</p:row>
 					</p:panelGrid>
 				</p:fieldset>
 
-				<p:fieldset legend="#{msgs.administrator}" toggleable="true"
-					rendered="#{userManager.loggedUser.hasRolePermission('ADMIN')==true}">
+				<br />
+
+				<p:fieldset legend="#{msgs.administrator}" toggleable="true" rendered="#{userManager.loggedUser.hasRolePermission('ADMIN')==true}">
 					<p:panelGrid styleClass="center">
 						<p:row>
 							<p:column>
-								<p:commandButton action="#{userCreator.createUser()}"
-									value="#{msgs.create_user}" styleClass="buttons" />
+								<p:commandButton action="#{userCreator.createUser()}" value="#{msgs.create_user}" styleClass="buttons" />
 							</p:column>
 							<p:column>
-								<p:button outcome="userList" value="#{msgs.view_users}"
-									styleClass="buttons" />
+								<p:button outcome="userList" value="#{msgs.view_users}" styleClass="buttons" />
 							</p:column>
 						</p:row>
 					</p:panelGrid>
